<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="PUNJAB MASSTRANSIT \nAUTHORITY"
            android:gravity="center"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/phone"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/phNo_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="13sp"
            android:background="@drawable/red_border"
            android:padding="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/pwdField"
            android:textSize="13sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <EditText
            android:id="@+id/pwd_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="13sp"
            android:background="@drawable/red_border"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:padding="14dp"
            android:longClickable="false"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPass"
            android:layout_marginTop="15dp"
            android:text="@string/forgotPass"
            android:textSize="13sp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="end"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signBtn"
            android:backgroundTint="@color/red"
            android:padding="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="13sp"
            android:id="@+id/login_btn"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpTxtView"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"/>
    </LinearLayout>
</RelativeLayout>